Commencing the act of unspaghetting the code